k8s/delivery-service.yml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  namespace: droneflow
spec:
  selector:
    app: delivery-service
  ports:
    - port: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service
  namespace: droneflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-service
  template:
    metadata:
      labels:
        app: delivery-service
    spec:
      containers:
        - name: delivery-service
          # Beacuse I have imported it in k3d
          image: delivery-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
