k8s/kafka.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: droneflow
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
    - port: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-cluster-ip
  namespace: droneflow
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
    - port: 9092

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: droneflow
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.6.0
          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
