k8s/order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: droneflow
spec:
  selector:
    app: order-service
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: droneflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          # Beacuse I have imported it in k3d
          image: order-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
