k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: droneflow
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8080
          - path: /drone
            pathType: Prefix
            backend:
              service:
                name: drone-service
                port:
                  number: 8082
